# matplotlib-cpp

./: .gitignore  CMakeLists.txt  README.md  install.sh  run.sh
examples/: CMakeLists.txt  minimal.cpp  run_examples.sh
include/: matplotlibcpp.h
install/include/: matplotlibcpp.h
install/lib/cmake/: matplotlibcpp_lib-config.cmake  matplotlibcpp_lib-noconfig.cmake  matplotlibcpp_lib.cmake
